--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -895,7 +895,7 @@ body {
   font-size: 14px;
   line-height: 1.42857143;
   color: #333333;
-  background-color: #ffffff;
+  background-color: #D7E2FD; //baby blue
 }
 input,
 button,
