--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,19 @@
 .top-buffer {
 	margin-bottom:10px;
 }
+
+.sleep-status-text {
+	color:white;
+}
+
+.center-block {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.center-but {
+	margin:auto;
+	width:100%;
+
+}
